rest: separate tree and xy entry points for the disk activity service
Reviewed-on: https://git.eclipse.org/r/110353
Tested-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
